# rosali

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
log-viewer/: App.vue  LogViewer.vue  index.html  main.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cluster_connections.rs  kube_networking_client.rs  kube_workloads_client.rs  main.rs
src-tauri/src/commands/: access_control_commands.rs  cluster_commands.rs  config_storage_commands.rs  mod.rs  networking_commands.rs  workloads_commands.rs
src-tauri/src/common/: common.rs  mod.rs  utils.rs
src-tauri/src/kube_clients/: kube_access_control_client.rs  kube_cluster_client.rs  kube_config_storage_client.rs  kube_networking_client.rs  kube_workloads_client.rs  mod.rs
src-tauri/src/kube_model/: base.rs  clusterrolebindings.rs  clusterroles.rs  configmap.rs  connection_details.rs  cronjobs.rs  daemonsets.rs  deployments.rs  endpoints.rs  event.rs  ingress.rs  ingress_class.rs  jobs.rs  mod.rs  namespaces.rs  network_policy.rs  nodes.rs  persistent_volumn_claims.rs  pods.rs  replicasets.rs  replication_controllers.rs  rolebindings.rs  roles.rs  secrets.rs  serviceaccounts.rs  services.rs  statefulsets.rs  storage_classes.rs  workload_status.rs
src-tauri/src/services/: kube_access_control_service.rs  kube_cluster_service.rs  kube_config_storage_service.rs  kube_networking_service.rs  kube_workloads_service.rs  kubeconfig.rs  mod.rs
src/components/: ClusterOverview.vue  DaemonSetsOverview.vue  DeploymentsOverview.vue  KubeconfigContexts.vue  PodsOverview.vue  ReplicaSetsOverview.vue
src/i18n/: index.ts
src/layout/: AppBottombar.vue  AppDetailsSidebar.vue  AppLayout.vue  AppMainView.vue  AppSidebar.vue  AppTopbar.vue  AppView.vue
src/model/: kube.ts
src/router/: index.ts
src/views/: ClusterOverview.vue  DaemonSetsOverview.vue  DeploymentsOverview.vue  KubeconfigContexts.vue  PodsOverview.vue  Settings.vue  StatefulSetsOverview.vue
(+38 files in other folders)
