[package]
name = "rosali"
version = "0.0.0"
description = "Rosali - a Kubernetes Desktop Client"
authors = ["seferino-fernandez <seferinofz@gmail.com>"]
license = "MIT"
repository = "https://github.com/seferino-fernandez/rosali-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kube = "0.87.1"
tokio = "1.34.0"
dirs = "5.0"
serde_yaml = "0.9.27"
uuid = "1.5.0"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
futures = "0.3.29"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
